<resources>
    <string name="app_name">K22411CSampleProject</string>
    <string name="title_login_username">User name:</string>
    <string name="title_login_user_name_hint">Enter your user name</string>
    <string name="title_login_password">Password:</string>
    <string name="title_login_save_login_info">Save login info</string>
    <string name="title_login_button_login">Login</string>
    <string name="confirm_exit_title">Exit confirmation</string>
    <string name="confirm_exit_message">Are you sure you want to exit?</string>
    <string name="confirm_exit_yes">YES</string>
    <string name="confirm_exit_no">NO</string>
    <string name="title_employee">Employee</string>
    <string name="title_customer">Customer</string>
    <string name="title_healthcare">Health Care</string>
    <string name="title_salary">Salary</string>
    <string name="title_employee_healthcare">Employee Healthcare</string>
    <string name="title_height">Height:</string>
    <string name="title_weight">Weight:</string>
    <string name="title_calculate">Calculate</string>
    <string name="title_clear">Clear</string>
    <string name="title_close">Close</string>
    <string name="title_slim">Slim</string>
    <string name="title_normal">Normal</string>
    <string name="title_fat">FAT</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_category">Category</string>
    <string name="title_product">Product</string>
    <string name="title_advancedproduct">Advanced Product</string>
    <string name="title_new_customer">New Customer</string>
    <string name="title_broadcast_advertising">Boardcast Advertising</string>
    <string name="title_help">Help</string>
    <string name="title_customer_details">Customer Detals</string>
    <string name="title_customer_id">Customer ID:</string>
    <string name="title_customer_name">Customer Name:\n</string>
    <string name="title_customer_email">Customer Email:</string>
    <string name="title_customer_phone">Customer Phone:</string>
    <string name="title_new">New</string>
    <string name="title_save">Save</string>
    <string name="title_remove">Remove</string>
    <string name="title_new_product">New Product</string>
    <string name="title_product_report">Product Report</string>
    <string name="title_product_details">Product Details</string>
    <string name="title_product_id">Product ID:</string>
    <string name="title_product_name">Product Name:</string>
    <string name="title_product_quantity">Product Quantity:</string>
    <string name="title_product_price">Product Price:</string>
    <string name="title_product_category">Product Category:</string>
    <string name="title_product_description">Product Description:</string>
    <string name="title_product_image">Product Image</string>
    <string name="title_payment_method">Payment Method</string>
    <string name="title_orders">Orders</string>
    <string name="title_telephony">Telephony</string>
    <string name="title_contact_name">Contact Name:</string>
    <string name="title_telephony_number">Phone Number:</string>
    <string name="title_body">Body:</string>
    <string name="title_multi_threading">Multi-threading</string>
    <string name="title_handler_send_message" />
    <string name="title_handler_send_messages">HANDLER SEND MESSAGE</string>
    <string name="title_handler_post_messages">HANDLER POST MESSAGE</string>
    <string name="title_asynctask">ASYNCTASK</string>
    <string name="title_draw">DRAW</string>
    <string name="title_number_of_customer">Number of Customer:</string>
    <string name="btn_load_customer">LOAD CUSTOMER</string>

</resources>