<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textView_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_product_details"
            android:textAlignment="center"
            android:textColor="#F44336"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView_product_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_product_id" />

        <EditText
            android:id="@+id/edt_product_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_product_name" />

        <EditText
            android:id="@+id/edt_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView_product_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_product_quantity" />

        <EditText
            android:id="@+id/edt_product_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView_product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_product_price" />

        <EditText
            android:id="@+id/edt_product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textView_product_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_product_category" />

        <EditText
            android:id="@+id/edt_product_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView_product_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_product_description" />

        <EditText
            android:id="@+id/edt_product_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/textView_product_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_product_image" />

        <EditText
            android:id="@+id/edt_product_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp">

            <Button
                android:id="@+id/btnNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_new" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_save" />

            <Button
                android:id="@+id/btnRemove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_remove" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>