<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="205dp"
        app:srcCompat="@mipmap/ic_logo_login" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_login_username"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edtUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/title_login_user_name_hint"
        android:inputType="text"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_login_password"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:textSize="24sp" />

    <CheckBox
        android:id="@+id/chkSaveLoginInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_login_save_login_info"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:onClick="do_login"
            android:id="@+id/gtnLogin"
            android:layout_width="215dp"
            android:layout_height="wrap_content"
            android:text="@string/title_login_button_login" />

        <ImageView

            android:onClick="do_exit"
            android:id="@+id/imgExit"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_exit" />

    </LinearLayout>

</LinearLayout>