<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SendSMSActivity">

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_contact_name"
        android:textColor="#3F51B5" />

    <TextView
        android:id="@+id/txtTelephonyName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="#3F51B5" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_telephony_number" />

    <TextView
        android:id="@+id/txtTelephonyNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="#F44336" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_body"
        android:textAlignment="center"
        android:textColor="#FF5722" />

    <EditText
        android:id="@+id/edtBody"
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgSendSms1"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_sendsms1" />

        <ImageView
            android:id="@+id/imgSendSms2"
            android:layout_width="wrap_content"
            android:layout_height="59dp"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_sendsms2" />
    </LinearLayout>

</LinearLayout>